fixed scoped webkit scrollbar issue

--- a/src/renderer/assets/style.css
+++ b/src/renderer/assets/style.css
@@ -3,13 +3,38 @@
 }
 
 html::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
+  width: 0px;
+  background: transparent;
 }
 
 html {
-    overflow: scroll;
-    overflow-x: hidden;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+div::-webkit-scrollbar, 
+main::-webkit-scrollbar {
+  width: 12px;
+}
+
+div::-webkit-scrollbar-track, 
+main::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); 
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+
+div::-webkit-scrollbar-thumb,
+main::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 1px;
+  border-radius: 1px;
+  background: rgba(227, 75, 20, 1); 
+  -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); 
+}
+
+div::-webkit-scrollbar-thumb:window-inactive,
+main::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(227, 75, 20, 0.5); 
 }
 
 body {
@@ -54,4 +79,9 @@ body {
   background-color: #fff;
   color: #363636;
   border-radius: 0px
+}
+
+.el-menu--horizontal {
+    border-right: none;
+    border-bottom: none;
 }
